--- a/data/members.yaml
+++ b/data/members.yaml
@@ -21,7 +21,7 @@
   name: 郎大为
 蔡占锐:
   image: https://cloud.githubusercontent.com/assets/7221728/25791987/71e81532-33f6-11e7-9c1a-19fa4a0e6148.png
-  intro: ''
+  intro: 人大本科，宾州州立博士在读。
   weight: 5
   name: 蔡占锐
 常象宇:
